# biller-category

./: README.md  pyproject.toml  requirements.txt  response_excel.xlsx
app/: main.py
app/api/v1/: endpoints.py
app/core/: excel_writer.py  llm_client.py  pdf_extractor.py
app/outputs/: bil-til-12july_20250713_150350.xlsx  bil-til-12july_20250713_150549.xlsx  bil-til-12july_20250713_150630.xlsx  bil-til-12july_20250713_150719.xlsx  bil-til-12july_20250713_151031.xlsx  bil-til-12july_20250713_151903.xlsx  bil-til-12july_20250713_152034.xlsx  bil-til-12july_20250713_152818.xlsx  june-creditcard_20250713_153444.xlsx  june-creditcard_20250713_155042.xlsx
app/prompts/: enhanced_prompt.py
